<resources>
    <string name="app_name">Notebook</string>
    <string name="default_folder_title_text_view_text">NoteBook</string>
    <string name="text_description_hint">Note Description</string>
    <string name="note_title_hint">Title</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="displayFolderContentHint">Folder title</string>
    <string name="loading_text_move">Kindly wait. The notes are moving</string>
    <string name="loading_text_copy">Kindly wait. The notes are copying</string>
    <string name="change_folder_title">Folder title</string>
    <string name="change_folder_title_dialog_cancel_text">CANCEL</string>
    <string name="change_folder_title_dialog_ok_text">OK</string>
    <string name="diaplay_no_notes_card_text">No Notes Added</string>
    <string name="display_folder_content_no_notes_card_text">No Notes Added</string>
    <string name="fragment_delete_dialog_box_title_text">"Delete folder "</string>
    <string name="fragment_delete_folder_content_text">Do u want to delete?</string>
    <string name="fragment_delete_dialog_box_yes_button_text">Yes</string>
    <string name="fragment_delete_dialog_box">No</string>
    <string name="menu_delete_text">Delete</string>
    <string name="menu_move_text">Move</string>
    <string name="menu_copy_text">Copy</string>
    <string name="fragment_move_title_text">Move</string>
    <string name="fragment_move_cancel_button_text">Cancel</string>

    <string name="nav_menu_all_note_card">All Note Cards</string>
    <string name="nav_menu_favourties_menu">Favourites</string>
    <string name="nav_menu_noteBook_menu">Notebooks</string>

    <string name="open_nav_drawer">open</string>
    <string name="close_nav_drawer">close</string>

    <string name="menu_check_box">checkBox</string>
    <string name="menu_item_favouite">Make Favourite</string>
    <string name="favourite_menu_unfavourite_text">Unfavourite</string>
    <string name="menu_item_Search_button">Search</string>

    <string name="content_description_done_button">Save</string>
    <string name="content_Description_back_button">Back</string>

    <string name="menu_item_search_text">Search</string>
    <string name="fragment_search_notes_head">Notes</string>

    <string name="test_string">textView</string>
    <string name="men_item_text">Sort By</string>
    <string name="sort_button_text">Close</string>


<!-- Sorting -->
    <string name="sort_title_text_A1_A2">Title</string>
    <string name="sort_subtitle_text_A1">Ascending</string>
    <string name="sort_subtitle_text_A2">Descending</string>

    <string name="sort_title_text_A3_A4">Date Modified</string>
    <string name="sort_subtitle_text_A3_A5">Oldest First</string>

    <string name="sort_title_text_A5_A6">Date Created</string>
    <string name="sort_subtitle_text_A4_A6">Newest First</string>

</resources>