<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_button"
        android:icon="@drawable/ic_search_button"
        android:title="@string/menu_item_Search_button"
        app:showAsAction="always" />
    <item
        android:id="@+id/sort_button"
        android:icon="@drawable/ic_sort_button"
        android:title="Sort By"
        app:showAsAction="always"/>

    <item android:id="@+id/select_button"
        android:title=""
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_select_all_24"/>
    <item
        android:id="@+id/delete_button"
        android:icon="@drawable/ic_baseline_delete_menu"
        android:title="@string/menu_delete_text"/>
    <item
        android:id="@+id/move_button"
        android:title="@string/menu_move_text" />
    <item
        android:id="@+id/copy_button"
        android:icon="@drawable/ic_copy_menu"
        android:title="@string/menu_copy_text"/>
    <item
        android:id="@+id/favourite_button"
        android:icon="@drawable/ic_favourties_star"
        android:title="@string/menu_item_favouite" />
</menu>