<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/edit_icon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/update_folder_name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_icon_edit" />

    <TextView
        android:id="@+id/edit_folder_name_text"
        style="@style/update_folder_title_style"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:paddingTop="8dp"
        android:text="@string/change_folder_title"
        android:textSize="@dimen/change_folder_title_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/edit_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/update_folder_name_input"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/displayFolderContentHint"
        android:inputType="textPersonName"
        android:maxLength="@integer/update_folder_title_max_length"
        android:maxLines="@integer/folder_title_lines"
        android:textSize="@dimen/change_folder_title_input_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_folder_name_text" />

    <Button
        android:id="@+id/change_folder_title_cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#AE4646"
        android:text="@string/change_folder_title_dialog_cancel_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_folder_name_input"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/change_folder_title_ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#2983B3"
        android:text="@string/change_folder_title_dialog_ok_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.343"
        app:layout_constraintStart_toEndOf="@+id/change_folder_title_cancelButton"
        app:layout_constraintTop_toBottomOf="@+id/update_folder_name_input"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>